teamcity_connection.properties

--- a/src/test/resources/teamcity_connection.properties
+++ b/src/test/resources/teamcity_connection.properties
@@ -1,2 +1,2 @@
 serverUrl=https://tests.teamcity.com/
-token=********
+token=eyJ0eXAiOiAiVENWMiJ9.TTJycWU3b1JXdXRHQVBmNnlLd1h5eDBrOXRz.ZTFhNGU5ZDItZGIyMC00OWNlLThmMGQtYzAwOTRlZDNhZGE5
