- new cloud instance of TeamCity (https://e2e.teamcity.com/)

--- a/src/test/resources/teamcity_connection.properties
+++ b/src/test/resources/teamcity_connection.properties
@@ -1,2 +1,2 @@
-serverUrl=https://tests.teamcity.com/
-token=eyJ0eXAiOiAiVENWMiJ9.TTJycWU3b1JXdXRHQVBmNnlLd1h5eDBrOXRz.ZTFhNGU5ZDItZGIyMC00OWNlLThmMGQtYzAwOTRlZDNhZGE5
+serverUrl=https://e2e.teamcity.com/
+token=eyJ0eXAiOiAiVENWMiJ9.OTNScnhGeVJISml5SGhFY3dmWno2ejNrZ3k4.YjI2ZTk2YmEtMDNhMS00OTQwLThjMmEtZjJiZGMzZWEwNWIx
